NavBar signIn spacing fixed. Changed message and logo position on SignIn.

--- a/src/css/navbar-main.css
+++ b/src/css/navbar-main.css
@@ -12,8 +12,9 @@
     flex-direction: row;
     font-weight: bold;
 }
+
 .about{
-    margin-right: 55rem;
+    margin-right: 50rem;
 }
 
 a:link {
